# hwctl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hwctld.service
daemon/: CMakeLists.txt  PKGBUILD  heap.c  heap.h  hwctld.c  profile.c  profile.h
include/: CMakeLists.txt  PKGBUILD
include/hwctl/: device.h  loader.h  plugin.h  vec.h
plugins/: CMakeLists.txt  kraken_xx2.c  nvidia.c
plugins/kraken_xx2/: CMakeLists.txt  PKGBUILD  kraken_xx2.c
plugins/nvidia/: CMakeLists.txt  PKGBUILD  nvidia.c
src/: CMakeLists.txt  PKGBUILD  device.c  loader.c  vec.c
util/: CMakeLists.txt  defs.h  dl_util.c  dl_util.h  fs_util.c  fs_util.h  hid_util.c  hid_util.h  str_util.c  str_util.h  time_util.c  time_util.h  usb_util.c  usb_util.h
utils/: CMakeLists.txt  hid_util.c  hid_util.h  str_util.c  time_util.c  time_util.h
